--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
   padding: 0;
 }
 
-body, button {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+body,
+button {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+img {
+  max-width: 100%;
 }
